# WF-TDM-Runs

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish-report.yml  validate-config.yml  validate-run-metadata.yml
_dev/: README.md  imtc-presentation.qmd  styles.css  tdm-run-management-framework-proposal.html  tdm-run-management-framework-proposal.qmd
config/: framework.yaml  local.example.yaml
config/schemas/: run_metadata.schema.json  run_set.schema.json  scenario.schema.json
docs/architecture/: 0001-submodule-execution-model.md  0002-override-model.md  0003-output-management.md  0004-run-metadata-storage.md  0005-ci-scope.md  0006-future-scalability.md  0007-custom-driver-script.md  0008-scenario-seeding.md  README.md
reports/: _quarto.yml  about_back_link.html  back_link.html  chart_utils.py  generate_title_metadata.py  global_shift_toggle.html  global_toggle_bar.html  index.qmd  report_data.py  slide_text_scale.html
reports/about/: index.qmd  styles.css
reports/run_sets/: non-motorized-2026.qmd
reports/run_sets/bring-work-trips-closer-to-home/: slides.qmd  summary.qmd
run_sets/bring-work-trips-closer-to-home/: REPORT_PLAN.md  report_loader.py  run_set.yaml
run_sets/non-motorized-2023/: input_prep.ipynb  report_loader.py  report_snapshot.py  run_set.yaml
run_sets/non-motorized-2026/: run_set.yaml
run_sets/toll-sensitivity-2026/: run_set.yaml
scripts/: check_file_sizes.py  validate_run_metadata.py
src/tdmruns/: __init__.py  cli.py  config.py  controlcenter.py  driver_script.py  exceptions.py  execution.py  matrix_utils.py  metadata.py  network_utils.py  outputs.py  paths.py  prep.py  retirement.py  scenario_seed.py  submodule.py
tests/: conftest.py  test_config.py  test_controlcenter.py  test_driver_script.py  test_integration.py  test_matrix_utils.py  test_network_utils.py  test_outputs.py  test_prep.py  test_retirement.py  test_scenario_seed.py  test_submodule.py
(+229 files in other folders)
