[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tdmruns"
version = "0.1.0"
description = "Orchestration framework for TDM sensitivity testing"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tdmruns = "tdmruns.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
