[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tdmruns"
version = "0.1.0"
description = "Orchestration framework for TDM sensitivity testing"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "click>=8.0",
    "openmatrix>=0.3.5",
    "geopandas>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# Everything reports/ needs to render (reports/*.py, run_sets/*/report_loader.py,
# and the .qmd files' setup cells) beyond the base dependencies above -- pulled
# in by publish-report.yml and by the "july2025" Jupyter kernel used locally.
reports = [
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pillow>=10.1.0",
]

[project.scripts]
tdmruns = "tdmruns.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
